@@ -1,11 +1,7 @@
 ==To-Do==
-* Fix: resize flickering
-* Fix: paper canvas is sometimes not showing. The canvas image is all white. How come?
-* CanvasWindow in fullscreen mode should have multiple display sizes
-* Implement available port group
-
 * Fix printing
-* Change "State:" to "Type:" in emulation available ports
+
+* Enable disclosure triangle for AVAILABLE PORTS and hide by default
 
 * Implement hardware library
 * Implement device dragging to the emulation window by checking testAddEDL
@@ -15,6 +11,9 @@
 * Delete a device in an emulation through Edit>Delete, or CMD+BACKSPACE
 * Implement removal of devices in a daisy chain (when port and connector are of the same kind)
 
+* Fix: resize flickering
+* Fix: paper canvas is sometimes not showing. The canvas image is all white. How come?
+* CanvasWindow in fullscreen mode should have multiple display sizes
 * Implement disk image file locking, if the disk image is writable (flock)
 
 ==Future to-do's==
